--- a/package.json
+++ b/package.json
@@ -5,11 +5,12 @@
     "@rails/actioncable": "^6.0.0",
     "@rails/activestorage": "^6.0.0",
     "@rails/ujs": "^6.0.0",
+    "browser-sync": "^2.27.7",
+    "turbolinks": "^5.2.0",
     "webpack": "^4.28.3",
     "webpack-cli": "^3.1.2",
     "webpack-dev-server": "^3.10.3",
-    "webpack-stream": "^5.2.1",
-    "turbolinks": "^5.2.0"
+    "webpack-stream": "^5.2.1"
   },
   "version": "0.1.0",
   "devDependencies": {
