--- a/package.json
+++ b/package.json
@@ -5,21 +5,23 @@
     "@rails/actioncable": "^6.0.0",
     "@rails/activestorage": "^6.0.0",
     "@rails/ujs": "^6.0.0",
+    "@rails/webpacker": "5.4.2",
+    "webpack": "^4.46.0",
+    "webpack-cli": "^3.3.12",
     "browser-sync": "^2.27.7",
+    "node-sass": "^6.0.1",
     "sass": "^1.43.4",
+    "sass-loader": "^10",
     "scss": "^0.2.4",
-    "turbolinks": "^5.2.0",
-    "@rails/webpacker": "5.4.3"
-
+    "turbolinks": "^5.2.0"
   },
   "version": "0.1.0",
   "devDependencies": {
     "@babel/plugin-proposal-class-properties": "^7.8.3",
     "@babel/plugin-transform-runtime": "^7.8.3",
-    "webpack": "^4.28.3",
-    "webpack-cli": "^3.1.2",
-    "webpack-dev-server": "^3.10.3",
-    "webpack-stream": "^5.2.1",
-    "rails-erb-loader": "^5.5.2"
+    "@webpack-cli/serve": "^1.6.0",
+    "rails-erb-loader": "^5.5.2",
+    "webpack-dev-server": "3.11.2",
+    "webpack-stream": "^5.2.1"
   }
 }
