--- a/package.json
+++ b/package.json
@@ -2,18 +2,23 @@
   "name": "scss",
   "private": true,
   "dependencies": {
+    "@babel/preset-react": "^7.16.0",
     "@rails/actioncable": "^6.0.0",
     "@rails/activestorage": "^6.0.0",
     "@rails/ujs": "^6.0.0",
     "@rails/webpacker": "5.4.2",
-    "webpack": "^4.46.0",
-    "webpack-cli": "^3.3.12",
+    "babel-plugin-transform-react-remove-prop-types": "^0.4.24",
     "browser-sync": "^2.27.7",
     "node-sass": "^6.0.1",
+    "prop-types": "^15.7.2",
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2",
     "sass": "^1.43.4",
     "sass-loader": "^10",
     "scss": "^0.2.4",
-    "turbolinks": "^5.2.0"
+    "turbolinks": "^5.2.0",
+    "webpack": "^4.46.0",
+    "webpack-cli": "^3.3.12"
   },
   "version": "0.1.0",
   "devDependencies": {
