--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     "prop-types": "^15.7.2",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-router-dom": "^6.0.2",
+    "react_ujs": "^2.6.1",
     "sass": "^1.43.4",
     "sass-loader": "^10",
     "scss": "^0.2.4",
