--- a/package.json
+++ b/package.json
@@ -3,14 +3,18 @@
   "private": true,
   "dependencies": {
     "@babel/preset-react": "^7.16.0",
+    "@jamen/lorem": "^0.2.0",
     "@rails/actioncable": "^6.0.0",
     "@rails/activestorage": "^6.0.0",
     "@rails/ujs": "^6.0.0",
     "@rails/webpacker": "5.4.2",
     "babel-plugin-transform-react-remove-prop-types": "^0.4.24",
     "browser-sync": "^2.27.7",
+    "dotenv": "^16.0.0",
     "ejs": "^3.1.6",
     "express": "^4.17.2",
+    "mongoose": "^6.2.0",
+    "mongose": "0.0.2-security",
     "node-sass": "^6.0.1",
     "prop-types": "^15.7.2",
     "react": "^17.0.2",
