--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "mongose": "0.0.2-security",
     "node-sass": "^6.0.1",
     "prop-types": "^15.7.2",
+    "puppeteer": "^13.2.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-router-dom": "^6.0.2",
@@ -27,7 +28,7 @@
     "scss": "^0.2.4",
     "turbolinks": "^5.2.0",
     "webpack": "^4.46.0",
-    "webpack-cli": "^3.3.12" 
+    "webpack-cli": "^3.3.12"
   },
   "version": "0.1.0",
   "devDependencies": {
@@ -38,8 +39,7 @@
     "webpack-dev-server": "3.11.2",
     "webpack-stream": "^5.2.1"
   },
-  "scripts":{
-    "test":"jest"
+  "scripts": {
+    "test": "jest"
   }
-  
 }
