maping out react values changes to abse theme

--- a/package.json
+++ b/package.json
@@ -2,8 +2,13 @@
   "name": "scss",
   "private": true,
   "dependencies": {
+    "@babel/plugin-proposal-private-property-in-object": "^7.16.7",
     "@babel/preset-react": "^7.16.0",
+    "@emotion/react": "^11.8.2",
+    "@emotion/styled": "^11.8.1",
     "@jamen/lorem": "^0.2.0",
+    "@mui/lab": "^5.0.0-alpha.73",
+    "@mui/material": "^5.5.1",
     "@rails/actioncable": "^6.0.0",
     "@rails/activestorage": "^6.0.0",
     "@rails/ujs": "^6.0.0",
@@ -16,6 +21,7 @@
     "jest": "^27.5.0",
     "mongoose": "^6.2.0",
     "mongose": "0.0.2-security",
+    "mui": "^0.0.1",
     "node-sass": "^6.0.1",
     "prop-types": "^15.7.2",
     "puppeteer": "^13.2.0",
