--- a/package.json
+++ b/package.json
@@ -2,11 +2,13 @@
   "name": "scss",
   "private": true,
   "dependencies": {
+    "@babel/plugin-proposal-private-methods": "^7.16.11",
     "@babel/plugin-proposal-private-property-in-object": "^7.16.7",
     "@babel/preset-react": "^7.16.0",
     "@emotion/react": "^11.8.2",
     "@emotion/styled": "^11.8.1",
     "@jamen/lorem": "^0.2.0",
+    "@mui/icons-material": "^5.5.1",
     "@mui/lab": "^5.0.0-alpha.73",
     "@mui/material": "^5.5.1",
     "@rails/actioncable": "^6.0.0",
@@ -19,6 +21,8 @@
     "ejs": "^3.1.6",
     "express": "^4.17.2",
     "jest": "^27.5.0",
+    "lorem-chucksum": "^1.0.2",
+    "lorem-ipsum": "^2.0.4",
     "mongoose": "^6.2.0",
     "mongose": "0.0.2-security",
     "mui": "^0.0.1",
@@ -38,7 +42,7 @@
   },
   "version": "0.1.0",
   "devDependencies": {
-    "@babel/plugin-proposal-class-properties": "^7.8.3",
+    "@babel/plugin-proposal-class-properties": "^7.16.7",
     "@babel/plugin-transform-runtime": "^7.8.3",
     "@webpack-cli/serve": "^1.6.0",
     "rails-erb-loader": "^5.5.2",
